@@ -1,7 +1,7 @@
 Package: tm
 Title: Text Mining Package
 Version: 0.3-2
-Date: 2008-11-02
+Date: 2008-11-08
 Author: Ingo Feinerer, with contributions from Christian Buchta, Kurt Hornik, David Meyer, and Fridolin Wild
 Maintainer: Ingo Feinerer <feinerer@logic.at>
 Depends: R (>= 2.7.0), filehash, Matrix, methods, Snowball, XML
