@@ -14,11 +14,12 @@ activateCluster <- function() clActive(TRUE)
 deactivateCluster <- function() clActive(FALSE)
 
 .onLoad <- function(libname, pkgname) {
-    if (require("snow", quietly = TRUE) && require("Rmpi", quietly = TRUE) && is.null(snow::getMPIcluster()))
+    require("methods")
+    if (suppressWarnings(require("snow", quietly = TRUE)) && suppressWarnings(require("Rmpi", quietly = TRUE)) && is.null(snow::getMPIcluster()))
         snow::makeMPIcluster(Rmpi::mpi.universe.size())
 }
 
 .Last <- function() {
-    if (require("snow", quietly = TRUE) && require("Rmpi", quietly = TRUE))
+    if (suppressWarnings(require("snow", quietly = TRUE)) && suppressWarnings(require("Rmpi", quietly = TRUE)))
         snow::stopCluster(snow::getMPIcluster())
 }
